[package]
name = "rust_maccs_ann"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6"}
ndarray-rand = "0.14.0"
polars = "0.30.0"
rand = "0.8.5"
rand_distr = "0.4.3"
blas-src = { version = "0.2.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }
byteorder = "1.3"
flate2 = "1.0"